Remove usages of java.util.Arrays in favor of Java 9+ collections methods