@@ -19,7 +19,6 @@
  */
 package org.sonar.java.checks;
 
-import java.util.Arrays;
 import java.util.Deque;
 import java.util.LinkedList;
 import java.util.List;
@@ -50,11 +49,11 @@ import org.sonar.plugins.java.api.tree.VariableTree;
 @Rule(key = "S2384")
 public class MutableMembersUsageCheck extends BaseTreeVisitor implements JavaFileScanner {
 
-  private static final List<String> MUTABLE_TYPES = Arrays.asList(
+  private static final List<String> MUTABLE_TYPES = List.of(
     "java.util.Collection",
     "java.util.Date",
     "java.util.Map");
-  private static final List<String> IMMUTABLE_TYPES = Arrays.asList(
+  private static final List<String> IMMUTABLE_TYPES = List.of(
     "java.util.Collections.UnmodifiableCollection",
     "java.util.Collections.UnmodifiableMap",
     "com.google.common.collect.ImmutableCollection",
