@@ -19,6 +19,7 @@
  */
 package org.sonar.java.checks;
 
+import java.util.List;
 import org.sonar.check.Rule;
 import org.sonar.java.model.ExpressionUtils;
 import org.sonar.plugins.java.api.IssuableSubscriptionVisitor;
@@ -28,9 +29,6 @@ import org.sonar.plugins.java.api.tree.ReturnStatementTree;
 import org.sonar.plugins.java.api.tree.Tree;
 import org.sonar.plugins.java.api.tree.Tree.Kind;
 
-import java.util.Arrays;
-import java.util.List;
-
 @Rule(key = "S2225")
 public class ToStringReturningNullCheck extends IssuableSubscriptionVisitor {
 
@@ -38,9 +36,9 @@ public class ToStringReturningNullCheck extends IssuableSubscriptionVisitor {
 
   @Override
   public List<Kind> nodesToVisit() {
-    return Arrays.asList(Tree.Kind.METHOD, Tree.Kind.RETURN_STATEMENT);
+    return List.of(Tree.Kind.METHOD, Tree.Kind.RETURN_STATEMENT);
   }
-  
+
   @Override
   public void visitNode(Tree tree) {
     if (tree.is(Tree.Kind.METHOD)) {
