@@ -19,7 +19,6 @@
  */
 package org.sonar.java.checks.serialization;
 
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -48,7 +47,7 @@ public class NonSerializableWriteCheck extends IssuableSubscriptionVisitor {
 
   @Override
   public List<Tree.Kind> nodesToVisit() {
-    return Arrays.asList(Tree.Kind.METHOD_INVOCATION, Tree.Kind.INSTANCE_OF);
+    return List.of(Tree.Kind.METHOD_INVOCATION, Tree.Kind.INSTANCE_OF);
   }
 
   @Override
